--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -45,7 +45,7 @@
 \caption{ بیس-ایمٹر  جوڑ  سیدھا مائل جبکہ بیس-کلکٹر جوڑ اُلٹا مائل کیا گیا ہے}
 \label{شکل_ٹرانزسٹر_مائل_کرنا}
 \end{figure}
-	شکل \حوالہ{شکل_ٹرانزسٹر_میں_چارجوں_کی_حرکت}  میں اس ٹرانزسٹر میں باروں کے حرکت کی وضاحت کی گئی ہے۔بیس-ایمٹر  جوڑ بالکل ڈایوڈ کی مانند عمل کرتا ہے۔بیرونی برقی دباو کی وجہ سے آزاد الیکٹران ایمٹر خطے سے بیس خطے میں داخل ہوتے ہیں۔ان الیکٹرانوں کو شکل میں \اصطلاح{مداخل الیکٹران}\فرہنگ{مداخل الیکٹران}\فرہنگ{injected electrons}\حاشیہب{injected electrons} کہا گیا ہے۔اسی طرح بیس خطے سے آزاد خول ایمٹر خطے میں داخل ہوتے ہیں۔ان خولوں کو شکل میں \اصطلاح{مداخل خول}\فرہنگ{مداخل خول}\فرہنگ{injected holes}\حاشیہب{injected holes} کہا گیا ہے۔منفی-جمع-منفی ٹرانزسٹر کی کارکردگی مداخل الیکٹرانوں پر منحصر ہوتی ہے جبکہ مداخل خول اس میں کوئی کردار ادا نہیں کرتے۔چونکہ مداخل الیکٹرانوں کی تعداد ایمٹر خطے میں ملاوٹی ایٹموں کی \اصطلاح{تعدادی کثافت}\فرہنگ{تعدادی کثافت}\حاشیہب{number density} \عددی{N_D}  پر منحصر ہے جبکہ مداخل خولوں کی تعداد بیس خطے میں ملاوٹی ایٹموں کی \اصطلاح{تعدادی کثافت} \عددی{N_A} پر منحصر ہے لہٰذا ٹرانزسٹر کے ایمٹر خطے میں  \عددی{N_D} کی قیمت  بیس خطے میں \عددی{N_A} کی قیمت سے کئی درجہ زیادہ رکھی جاتی ہے۔
+	شکل \حوالہ{شکل_ٹرانزسٹر_میں_چارجوں_کی_حرکت}  میں اس ٹرانزسٹر میں باروں کے حرکت کی وضاحت کی گئی ہے۔بیس-ایمٹر  جوڑ بالکل ڈایوڈ کی مانند عمل کرتا ہے۔بیرونی برقی دباو کی وجہ سے آزاد الیکٹران ایمٹر خطے سے بیس خطے میں داخل ہوتے ہیں۔ان الیکٹرانوں کو شکل میں \اصطلاح{مداخل الیکٹران}\فرہنگ{مداخل الیکٹران}\فرہنگ{injected electrons}\حاشیہب{injected electrons} کہا گیا ہے۔اسی طرح بیس خطے سے آزاد خلو ایمٹر خطے میں داخل ہوتے ہیں۔ان خلووں کو شکل میں \اصطلاح{مداخل خلو}\فرہنگ{مداخل خلو}\فرہنگ{injected holes}\حاشیہب{injected holes} کہا گیا ہے۔منفی-جمع-منفی ٹرانزسٹر کی کارکردگی مداخل الیکٹرانوں پر منحصر ہوتی ہے جبکہ مداخل خلو اس میں کوئی کردار ادا نہیں کرتے۔چونکہ مداخل الیکٹرانوں کی تعداد ایمٹر خطے میں ملاوٹی ایٹموں کی \اصطلاح{تعدادی کثافت}\فرہنگ{تعدادی کثافت}\حاشیہب{number density} \عددی{N_D}  پر منحصر ہے جبکہ مداخل خلووں کی تعداد بیس خطے میں ملاوٹی ایٹموں کی \اصطلاح{تعدادی کثافت} \عددی{N_A} پر منحصر ہے لہٰذا ٹرانزسٹر کے ایمٹر خطے میں  \عددی{N_D} کی قیمت  بیس خطے میں \عددی{N_A} کی قیمت سے کئی درجہ زیادہ رکھی جاتی ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{motionOfCharges}
@@ -63,7 +63,7 @@ I_E = x q
 \caption{\عددی{npn} ٹرانزسٹر میں الیکٹرانوں کا بہاو}
 \label{شکل_ٹرانزسٹر_میں_الیکٹرانوں_کا_بہاو}
 \end{figure}
-	بیرونی برقی دباو بیس-ایمٹر  جوڑ کو سیدھا مائل کئے ہوئے ہے۔یوں اس جوڑ میں بالکل سیدھے مائل ڈایوڈ کی طرح برقی رو کا گزر ہو گا اور تمام کے تمام \عددی{x} الیکٹران بیس خطے میں پہنچ جائیں گے۔\حاشیہد{یہاں خول کے بہاو کو نظر انداز کیا گیا ہے۔اس کی بات آگے جا کر ہو گی}بیس خطے میں مداخل الیکٹران ہر جانب نفوذ پذیر ہوں گے۔جیسا پہلے ذکر ہوا بیس خطے کا بیشتر حصہ \اصطلاح{ویران} خطہ بن چکا ہے۔بیس خطے میں مداخل الیکٹران اس باریک لمبائی والے بیس خطے سے ٹرانزسٹر کے بیرونی سرے \عددی{B}  تک پہنچنے کی کوشش کریں گے۔ایسے الیکٹران حرارتی توانائی کی بدولت بیس خطے میں ہر جانب نفوذ پذیر ہوں گے تاہم بیرونی برقی دباو \عددی{V_I}  کی وجہ سے ان کی اوسط رفتار برقی سرے \عددی{B}  کی جانب ہوتی ہے۔ان الیکٹرانوں میں سے متعدد الیکٹران اس سفر کے دوران بیس-کلکٹر جوڑ کے ویران خطے میں داخل ہو جاتے ہیں۔جیسا کہ آپ جانتے ہیں کہ اس ویران  خطے سے منفی بار تیزی سے دائیں جانب یعنی کلکٹر  خطے میں منتقل ہو جاتے ہیں۔یوں  \عددی{x} الیکٹرانوں کا بیشتر حصہ کلکٹر  خطے میں پہنچ جاتا ہے اور یہاں سے ٹرانزسٹر کے بیرونی کلکٹر  سرے پر پہنچ کر برقی رو \عددی{I_C} پیدا کرتا ہے۔کلکٹر  خطے پہنچنے والے الیکٹرانوں کی تعداد کو \عددی{\alpha x} لکھا جا سکتا ہے جہاں \عددی{\alpha} کی قیمت عموماً \عددی{0.9} تا \عددی{0.99} ہوتی ہے۔یوں کلکٹر  سرے پر برقی رو \عددی{I_C} کی قیمت
+	بیرونی برقی دباو بیس-ایمٹر  جوڑ کو سیدھا مائل کئے ہوئے ہے۔یوں اس جوڑ میں بالکل سیدھے مائل ڈایوڈ کی طرح برقی رو کا گزر ہو گا اور تمام کے تمام \عددی{x} الیکٹران بیس خطے میں پہنچ جائیں گے۔\حاشیہد{یہاں خلو کے بہاو کو نظر انداز کیا گیا ہے۔اس کی بات آگے جا کر ہو گی}بیس خطے میں مداخل الیکٹران ہر جانب نفوذ پذیر ہوں گے۔جیسا پہلے ذکر ہوا بیس خطے کا بیشتر حصہ \اصطلاح{ویران} خطہ بن چکا ہے۔بیس خطے میں مداخل الیکٹران اس باریک لمبائی والے بیس خطے سے ٹرانزسٹر کے بیرونی سرے \عددی{B}  تک پہنچنے کی کوشش کریں گے۔ایسے الیکٹران حرارتی توانائی کی بدولت بیس خطے میں ہر جانب نفوذ پذیر ہوں گے تاہم بیرونی برقی دباو \عددی{V_I}  کی وجہ سے ان کی اوسط رفتار برقی سرے \عددی{B}  کی جانب ہوتی ہے۔ان الیکٹرانوں میں سے متعدد الیکٹران اس سفر کے دوران بیس-کلکٹر جوڑ کے ویران خطے میں داخل ہو جاتے ہیں۔جیسا کہ آپ جانتے ہیں کہ اس ویران  خطے سے منفی بار تیزی سے دائیں جانب یعنی کلکٹر  خطے میں منتقل ہو جاتے ہیں۔یوں  \عددی{x} الیکٹرانوں کا بیشتر حصہ کلکٹر  خطے میں پہنچ جاتا ہے اور یہاں سے ٹرانزسٹر کے بیرونی کلکٹر  سرے پر پہنچ کر برقی رو \عددی{I_C} پیدا کرتا ہے۔کلکٹر  خطے پہنچنے والے الیکٹرانوں کی تعداد کو \عددی{\alpha x} لکھا جا سکتا ہے جہاں \عددی{\alpha} کی قیمت عموماً \عددی{0.9} تا \عددی{0.99} ہوتی ہے۔یوں کلکٹر  سرے پر برقی رو \عددی{I_C} کی قیمت
 \begin{align}
 I_C = \alpha x q
 \end{align}
@@ -171,7 +171,7 @@ I_B&=\frac{I_S}{\beta} \left(e^{\frac{V_{BE}}{V_T}-1} \right)
 \end{gather}
 لکھا جا سکتا ہے۔اس کتاب میں مساوات \حوالہ{مساوات_ٹرانزسٹر_بنیادی_ڈایوڈ-مساوات} ہی استعمال کئے جائیں گے۔آپ نے دیکھا کہ \عددیء{I_B} کم یا زیادہ کرنے سے \عددیء{I_C} بھی کم یا زیادہ ہوتی ہے۔حقیقت میں \عددیء{V_{BE}} کم یا زیادہ کرنے سے \عددیء{I_B} کم یا زیادہ کیا جاتا ہے۔بیس-ایمٹر جوڑ پر برقی دباو \عددیء{V_{BE}} کم یا زیادہ کرنے سے  \عددیء{I_E} مساوات \حوالہ{مساوات_ٹرانزسٹر_بنیادی_ڈایوڈ-مساوات} کے تحت کم یا زیادہ  ہو گی اور \عددیء{I_B} بھی کم یا زیادہ ہو گی۔\عددیء{I_C} اور \عددیء{I_B} کی شرح \عددیء{\beta} رہے گا۔
 
-اب تک کی گفتگو سے ظاہر ہے کہ \عددی{npn} ٹرانزسٹر میں مداخل خولوں کا \عددی{I_C}  کے پیدا کرنے میں کوئی کردار نہیں۔اسی لئے جیسا شروع میں ذکر ہوا مداخل خولوں کی تعداد کم سے کم رکھی جاتی ہے۔
+اب تک کی گفتگو سے ظاہر ہے کہ \عددی{npn} ٹرانزسٹر میں مداخل خلووں کا \عددی{I_C}  کے پیدا کرنے میں کوئی کردار نہیں۔اسی لئے جیسا شروع میں ذکر ہوا مداخل خلووں کی تعداد کم سے کم رکھی جاتی ہے۔
 
 مندرجہ بالا گفتگو میں بیس-کلکٹر جوڑ کو اُلٹ مائل رکھا گیا۔اُلٹے مائل ڈایوڈ کی طرح اس جوڑ میں الٹی جانب برقی رو \عددی{I_S} گزرے گی۔ڈایوڈ کی طرح حقیقت میں اُلٹی برقی رو کی اصل قیمت تجزیہ سے حاصل \عددی{I_S} کی قیمت سے کئی درجہ زیادہ ہوتی ہے اور اس کی قیمت الٹی برقی دباو پر منحصر ہوتی ہے۔ٹرانزسٹر میں اس برقی رو کو \عددی{I_{CB0}} لکھا جاتا ہے۔ \عددی{I_{CB0}} سے مراد ایمٹر سرے کو کھلے سرے رکھتے ہوئے بیس-کلکٹر جوڑ پر الٹی برقی رو ہے۔اوپر مساوات حاصل کرتے وقت \عددی{I_{CB0}}  کو نظر انداز کیا گیا ہے۔یوں حقیقت میں
 \begin{align}
@@ -213,15 +213,15 @@ h_{fe}=\frac{\Delta i_C}{\Delta i_B}=\frac{i_c}{i_b}
 \label{شکل_غیر_افزائندہ_برقی_دباو}
 \end{figure}
 \حصہ{افزائندہ حال جمع-منفی-جمع \عددی{pnp} ٹرانزسٹر کی کارکردگی}
-شکل \حوالہ{شکل_جمع_منفی_جمع_ٹرانزسٹر_خول_کا_بہاو} میں \عددی{pnp} ٹرانزسٹر  کے بیس-ایمٹر  جوڑ کو سیدھا مائل جبکہ بیس-کلکٹر جوڑ کو الٹا مائل کرتے ہوئے اسے افزائندہ خطے میں رکھا گیا ہے۔\عددی{pnp} ٹرانزسٹر کی کارکردگی بالکل \عددی{npn} ٹرانزسٹر کی طرح ہے۔فرق صرف اتنا ہے کہ \عددی{npn} ٹرانزسٹر میں برقی رو کا وجود ٹرانزسٹر میں \اصطلاح{الیکٹرانوں} کی حرکت سے ہوتا ہے جبکہ \عددی{pnp} ٹرانزسٹر میں برقی رو کا وجود ٹرانزسٹر میں \اصطلاح{خولوں} کی حرکت سے ہوتا ہے۔
+شکل \حوالہ{شکل_جمع_منفی_جمع_ٹرانزسٹر_خلو_کا_بہاو} میں \عددی{pnp} ٹرانزسٹر  کے بیس-ایمٹر  جوڑ کو سیدھا مائل جبکہ بیس-کلکٹر جوڑ کو الٹا مائل کرتے ہوئے اسے افزائندہ خطے میں رکھا گیا ہے۔\عددی{pnp} ٹرانزسٹر کی کارکردگی بالکل \عددی{npn} ٹرانزسٹر کی طرح ہے۔فرق صرف اتنا ہے کہ \عددی{npn} ٹرانزسٹر میں برقی رو کا وجود ٹرانزسٹر میں \اصطلاح{الیکٹرانوں} کی حرکت سے ہوتا ہے جبکہ \عددی{pnp} ٹرانزسٹر میں برقی رو کا وجود ٹرانزسٹر میں \اصطلاح{خلووں} کی حرکت سے ہوتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{holeFlowA}
-\caption{\عددی{pnp} ٹرانزسٹر میں خول کا بہاو}
-\label{شکل_جمع_منفی_جمع_ٹرانزسٹر_خول_کا_بہاو}
+\caption{\عددی{pnp} ٹرانزسٹر میں خلو کا بہاو}
+\label{شکل_جمع_منفی_جمع_ٹرانزسٹر_خلو_کا_بہاو}
 \end{figure}
 
-جیسا شکل میں دکھایا گیا ہے، بیرونی لاگو برقی دباو \عددی{V_1} ایمٹر-بیس جوڑ کو سیدھا مائل کرتا ہے جس سے ایمٹر سے  بیس خطے میں خول داخل ہوتے ہیں اور بیس خطے  سے ایمٹر خطے میں الیکٹران داخل ہوتے ہیں۔چونکہ بیس خطے میں الیکٹران کی تعدادی کثافت ایمٹر میں خول کی تعدادی کثافت سے کئی درجے کم رکھی جاتی ہے لہٰذا ایمٹر سے بیس خطے میں داخل ہونے والے خولوں کی تعداد بیس سے ایمٹر داخل ہونے والے الیکٹرانوں کی تعداد سے کئی درجے زیادہ ہوتی ہے۔بیس خطے کی لمبائی نہایت کم ہوتی ہے اور یوں بیس خطے میں داخل ہونے والے خولوں کا بیشتر حصہ بیس-کلکٹر جوڑ پر پائے جانے والے ویران خطے تک پہنچتا ہے۔ویران خطے میں خول داخل ہوتے ہی یہاں پائے جانے والے برقی میدان کی وجہ سے کلکٹر  میں دھکیل دئے جاتے ہیں۔یوں ایمٹر سے بیس میں خارج کئے جانے والے خولوں کا بیشتر حصہ کلکٹر  پہنچ کر \عددی{I_C} پیدا کرتا ہے۔کلکٹر  کے دھاتی جوڑ پر پہنچنے والا ہر خول، ٹرانزسٹر میں باہر سے آنے والے الیکٹران کے ساتھ مل کر ختم ہوتا ہے۔یوں بیرونی دور میں برقی رو الیکٹران کے حرکت سے جبکہ \عددی{pnp} کے اندر برقی رو خول کے حرکت سے پیدا ہوتا ہے۔
+جیسا شکل میں دکھایا گیا ہے، بیرونی لاگو برقی دباو \عددی{V_1} ایمٹر-بیس جوڑ کو سیدھا مائل کرتا ہے جس سے ایمٹر سے  بیس خطے میں خلو داخل ہوتے ہیں اور بیس خطے  سے ایمٹر خطے میں الیکٹران داخل ہوتے ہیں۔چونکہ بیس خطے میں الیکٹران کی تعدادی کثافت ایمٹر میں خلو کی تعدادی کثافت سے کئی درجے کم رکھی جاتی ہے لہٰذا ایمٹر سے بیس خطے میں داخل ہونے والے خلووں کی تعداد بیس سے ایمٹر داخل ہونے والے الیکٹرانوں کی تعداد سے کئی درجے زیادہ ہوتی ہے۔بیس خطے کی لمبائی نہایت کم ہوتی ہے اور یوں بیس خطے میں داخل ہونے والے خلووں کا بیشتر حصہ بیس-کلکٹر جوڑ پر پائے جانے والے ویران خطے تک پہنچتا ہے۔ویران خطے میں خلو داخل ہوتے ہی یہاں پائے جانے والے برقی میدان کی وجہ سے کلکٹر  میں دھکیل دئے جاتے ہیں۔یوں ایمٹر سے بیس میں خارج کئے جانے والے خلووں کا بیشتر حصہ کلکٹر  پہنچ کر \عددی{I_C} پیدا کرتا ہے۔کلکٹر  کے دھاتی جوڑ پر پہنچنے والا ہر خلو، ٹرانزسٹر میں باہر سے آنے والے الیکٹران کے ساتھ مل کر ختم ہوتا ہے۔یوں بیرونی دور میں برقی رو الیکٹران کے حرکت سے جبکہ \عددی{pnp} کے اندر برقی رو خلو کے حرکت سے پیدا ہوتا ہے۔
 
 \جزوحصہ{\عددی{pnp} کے \عددی{V_{EB}} اور \عددی{V_{EC}}}
 \عددی{npn} ٹرانزسٹر کے سیدھے مائل بیس-ایمٹر  جوڑ پر \عددی{V_{BE}=\SI{0.7}{\volt}} پایا جاتا ہے اور \عددی{\زیرنوشت{V}{CE}{غیرافزائندہ}=\SI{0.2}{\volt}}  پر ٹرانزسٹر غیر افزائندہ ہو جاتا ہے۔\عددی{pnp} ٹرانزسٹر میں بھی ایسا ہی ہوتا ہے پس جوڑ کے نام الٹے لکھنے پڑتے ہیں یعنی \عددی{pnp} کے سیدھے مائل ایمٹر-بیس جوڑ پر \عددی{V_{EB}=\SI{0.7}{\volt}} پایا جاتا ہے اور \عددی{\زیرنوشت{V}{EC}{غیرافزائندہ}=\SI{0.2}{\volt}}  پر ٹرانزسٹر غیر افزائندہ ہو جاتا ہے۔
