--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -38,7 +38,7 @@
 شکل \حوالہ{شکل_برقی_راہ_کا_وجود_پیدا_ہونا} الف میں ماسفیٹ کا گیٹ آزاد رکھ کر اس کے سورس اور ڈرین سروں کے مابین برقی دباو \عددی{v_{DS}} لاگو کیا گیا ہے۔مزید یہ کہ ان کے \اصطلاح {بدن} اور ڈرین دونوں سروں کو برقی زمین پر رکھا گیا ہے۔ \عددی{v_{DS}}  لاگو کرنے سے ڈرین-بدن جوڑ پر ویران خطہ بڑھ جاتا ہے اور اس برقی دباو کو روکے رکھتا ہے۔
 
 \جزوحصہ{گیٹ کے ذریعہ برقی رو کے لئے راہ  کی تیاری}
-شکل \حوالہ{شکل_برقی_راہ_کا_وجود_پیدا_ہونا} ب میں بدن اور سورس کو برقی زمین پر رکھتے ہوئے گیٹ پر برقی دباو \عددی{v_{GS}} مہیا کیا گیا ہے۔گیٹ پر مثبت برقی دباو  \عددی{p} قسم کی سلیکان پتری میں آزاد خول کو دور دھکیلتا ہے جبکہ یہاں موجود آزاد اقلیتی الیکٹران کو گیٹ کی جانب کھینچتا ہے۔مزید یہ کہ اس برقی دباو کی وجہ سے دونوں \عددی{n+} خطوں میں موجود (ضرورت سے زیادہ تعداد میں) آزاد الیکٹرانوں کو بھی گیٹ کے نیچے کھینچا جاتا ہے۔اگر گیٹ پر مثبت برقی دباو بتدریج بڑھایا جائے تو گیٹ کے نیچے \عددی{p} سلیکان میں الیکٹرانوں کی تعداد بڑھتی ہے اور آخر کار  الیکٹرانوں کی تعداد خولوں کی تعداد سے بھی زیادہ ہو جاتی ہے۔اس عمل سے \عددی{p} خطہ الٹا ہو کر \عددی{n} خطہ بن جاتا ہے۔ایک قسم کے سلیکان سے زبردستی دوسری قسم کی سلیکان بنانے کے عمل کو \اصطلاح {الٹا کرنا}\فرہنگ{الٹا!کرنا}\حاشیہب{inversion}\فرہنگ{inversion} کہتے ہیں اور ایسے الٹا کئے گئے خطے کو  \اصطلاح {الٹا خطہ}\فرہنگ{الٹا!خطہ}\حاشیہب{inversion layer}\فرہنگ{inversion layer} کہا جاتا ہے۔گیٹ پر برقی دباو بڑھانے سے گیٹ کے نیچے \اصطلاح {الٹا خطہ} بھی بڑھتا ہے اور آخر کار یہ سورس سے ڈرین تک پہل جاتا ہے۔یوں سورس سے ڈرین تک \عددی{n} قسم کی راہ وجود میں آتی ہے۔جیسے ہی سورس اور ڈرین خطوں کے مابین راہ پیدا ہوتا ہے ان خطوں کے مابین برقی رو کا گزر ممکن ہو جاتا ہے۔جس برقی دباو پر ایسا ہو جائے اس کو \اصطلاح {دہلیز برقی دباو}\فرہنگ{دہلیز برقی دباو}\فرہنگ{برقی دباو!دہلیز}\فرہنگ{threshold voltage}\حاشیہب{threshold voltage}  \عددی{V_t} کہتے ہیں۔شکل  ب میں یوں پیدا کیا گیا راہ دکھایا گیا ہے۔حقیقت میں \عددی{V_t} سے ذرا سی زیادہ برقی دباو پر برقی رو کا گزر ممکن ہوتا ہے۔یوں ہم کہہ سکتے ہیں کہ گیٹ پر \عددی{V_t} یا اس سے کم برقی دباو کی صورت میں ٹرانزسٹر \اصطلاح {غیر چالو} یا \اصطلاح {منقطع} رہتا ہے جبکہ گیٹ پر \عددی{V_t} سے زیادہ برقی دباو کی صورت میں ٹرانزسٹر \اصطلاح {چالو} یا \اصطلاح {غیر منقطع} رہتا ہے یعنی
+شکل \حوالہ{شکل_برقی_راہ_کا_وجود_پیدا_ہونا} ب میں بدن اور سورس کو برقی زمین پر رکھتے ہوئے گیٹ پر برقی دباو \عددی{v_{GS}} مہیا کیا گیا ہے۔گیٹ پر مثبت برقی دباو  \عددی{p} قسم کی سلیکان پتری میں آزاد خلو کو دور دھکیلتا ہے جبکہ یہاں موجود آزاد اقلیتی الیکٹران کو گیٹ کی جانب کھینچتا ہے۔مزید یہ کہ اس برقی دباو کی وجہ سے دونوں \عددی{n+} خطوں میں موجود (ضرورت سے زیادہ تعداد میں) آزاد الیکٹرانوں کو بھی گیٹ کے نیچے کھینچا جاتا ہے۔اگر گیٹ پر مثبت برقی دباو بتدریج بڑھایا جائے تو گیٹ کے نیچے \عددی{p} سلیکان میں الیکٹرانوں کی تعداد بڑھتی ہے اور آخر کار  الیکٹرانوں کی تعداد خلووں کی تعداد سے بھی زیادہ ہو جاتی ہے۔اس عمل سے \عددی{p} خطہ الٹا ہو کر \عددی{n} خطہ بن جاتا ہے۔ایک قسم کے سلیکان سے زبردستی دوسری قسم کی سلیکان بنانے کے عمل کو \اصطلاح {الٹا کرنا}\فرہنگ{الٹا!کرنا}\حاشیہب{inversion}\فرہنگ{inversion} کہتے ہیں اور ایسے الٹا کئے گئے خطے کو  \اصطلاح {الٹا خطہ}\فرہنگ{الٹا!خطہ}\حاشیہب{inversion layer}\فرہنگ{inversion layer} کہا جاتا ہے۔گیٹ پر برقی دباو بڑھانے سے گیٹ کے نیچے \اصطلاح {الٹا خطہ} بھی بڑھتا ہے اور آخر کار یہ سورس سے ڈرین تک پہل جاتا ہے۔یوں سورس سے ڈرین تک \عددی{n} قسم کی راہ وجود میں آتی ہے۔جیسے ہی سورس اور ڈرین خطوں کے مابین راہ پیدا ہوتا ہے ان خطوں کے مابین برقی رو کا گزر ممکن ہو جاتا ہے۔جس برقی دباو پر ایسا ہو جائے اس کو \اصطلاح {دہلیز برقی دباو}\فرہنگ{دہلیز برقی دباو}\فرہنگ{برقی دباو!دہلیز}\فرہنگ{threshold voltage}\حاشیہب{threshold voltage}  \عددی{V_t} کہتے ہیں۔شکل  ب میں یوں پیدا کیا گیا راہ دکھایا گیا ہے۔حقیقت میں \عددی{V_t} سے ذرا سی زیادہ برقی دباو پر برقی رو کا گزر ممکن ہوتا ہے۔یوں ہم کہہ سکتے ہیں کہ گیٹ پر \عددی{V_t} یا اس سے کم برقی دباو کی صورت میں ٹرانزسٹر \اصطلاح {غیر چالو} یا \اصطلاح {منقطع} رہتا ہے جبکہ گیٹ پر \عددی{V_t} سے زیادہ برقی دباو کی صورت میں ٹرانزسٹر \اصطلاح {چالو} یا \اصطلاح {غیر منقطع} رہتا ہے یعنی
 \begin{gather}
 \begin{aligned}
 v_{GS} &\le  V_t && & & \text{منقطع} \\
@@ -232,7 +232,7 @@ v_{\textup{DSدبوچ}}=v_{GS}-V_t
 \begin{align}
 E=-\frac{\Delta v(x)}{\Delta x}
 \end{align}
-ہو گا۔اس کی سمت ڈرین سے سورس خطے کی جانب ہے۔شدتِ برقی دباو کسی بھی مثبت بار کو \عددی{E} کی سمت میں جبکہ منفی بار کو الٹی جانب دھکیلتا ہے۔چونکہ پیدا کردہ راہ میں منفی بار پائے جاتے ہیں لہٰذا شدتِ برقی دباو انہیں سورس سے ڈرین خطے کی جانب دھکیلے گا۔کسی بھی موصل میں چارجوں کی رفتار وہاں کے شدتِ برقی دباو کے برائے راست متناسب ہوتا ہے۔یوں منفی چارجوں کے رفتار کو \عددی{(-\mu_n E)} اور مثبت چارجوں کے رفتار کو  \عددی{(\mu_p E)} لکھا جائے گا جہاں \عددی{\mu_n}  سلیکان پتری میں \اصطلاح {الیکٹران کی حرکت پذیری}\فرہنگ{حرکت پذیری!الیکٹران}\فرہنگ{electron mobility}\حاشیہب{electron mobility}  کہلاتا ہے جبکہ  \عددی{\mu_p} سلیکان پتری میں \اصطلاح {خول کی حرکت پذیری}\فرہنگ{حرکت پذیری!خول}\فرہنگ{hole mobility}\حاشیہب{hole mobility}  کہلاتا ہے۔یہاں \اصطلاح {حرکت پذیری} سے مراد \اصطلاح {الٹا خطے} میں \اصطلاح {حرکت پذیری} ہے۔یہاں رک کر تسلی کر لیں کہ یہ دو مساوات دونوں اقسام کے چارجوں کے رفتار کے صحیح سمت دیتے ہیں۔یوں رفتار کو \عددی{\frac{\Delta x}{\Delta t}} لکھتے ہوئے الیکٹرانوں کے لئے ہم یوں لکھ سکتے ہیں۔
+ہو گا۔اس کی سمت ڈرین سے سورس خطے کی جانب ہے۔شدتِ برقی دباو کسی بھی مثبت بار کو \عددی{E} کی سمت میں جبکہ منفی بار کو الٹی جانب دھکیلتا ہے۔چونکہ پیدا کردہ راہ میں منفی بار پائے جاتے ہیں لہٰذا شدتِ برقی دباو انہیں سورس سے ڈرین خطے کی جانب دھکیلے گا۔کسی بھی موصل میں چارجوں کی رفتار وہاں کے شدتِ برقی دباو کے برائے راست متناسب ہوتا ہے۔یوں منفی چارجوں کے رفتار کو \عددی{(-\mu_n E)} اور مثبت چارجوں کے رفتار کو  \عددی{(\mu_p E)} لکھا جائے گا جہاں \عددی{\mu_n}  سلیکان پتری میں \اصطلاح {الیکٹران کی حرکت پذیری}\فرہنگ{حرکت پذیری!الیکٹران}\فرہنگ{electron mobility}\حاشیہب{electron mobility}  کہلاتا ہے جبکہ  \عددی{\mu_p} سلیکان پتری میں \اصطلاح {خلو کی حرکت پذیری}\فرہنگ{حرکت پذیری!خلو}\فرہنگ{hole mobility}\حاشیہب{hole mobility}  کہلاتا ہے۔یہاں \اصطلاح {حرکت پذیری} سے مراد \اصطلاح {الٹا خطے} میں \اصطلاح {حرکت پذیری} ہے۔یہاں رک کر تسلی کر لیں کہ یہ دو مساوات دونوں اقسام کے چارجوں کے رفتار کے صحیح سمت دیتے ہیں۔یوں رفتار کو \عددی{\frac{\Delta x}{\Delta t}} لکھتے ہوئے الیکٹرانوں کے لئے ہم یوں لکھ سکتے ہیں۔
 \begin{align} \label{مساوات_میدانی_الیکٹران_کی_رفتار}
 \frac{\Delta x}{\Delta t}=-\mu_n E=\mu_n \frac{\Delta v(x)}{\Delta t}
 \end{align}
@@ -410,7 +410,7 @@ i_{DS}=\frac{k_n}{2} v_{DS}^2
 
 
 \حصہ{بڑھاتا \عددی{\textup{pMOSFET}}  ماسفیٹ}
-\عددی{p} ماسفیٹ، جسے ہم اس کتاب میں مثبت ماسفیٹ بھی کہیں گے، کو \عددی{n} قسم کی سلیکان پتری پر بنایا جاتا ہے جس میں دو عدد \عددی{p+} قسم کے خطے بنائے جاتے ہیں۔\عددی{\textup{pMOSFET}} کی کارکردگی بالکل \عددی{\textup{nMOSFET}} کی طرح ہے البتہ اس میں \عددیء{v_{DS}}، \عددی{v_{GS}} اور \عددی{V_t} تینوں کی قیمتیں منفی ہوتی ہیں۔اسی طرح برقی رو \عددی{i_{DS}} کی سمت بھی الٹی ہوتی ہے یعنی برقی رو ٹرانزسٹر کے ڈرین سرے سے باہر کی جانب ہوتا ہے۔اسی لئے \تحریر{pMOSFET} کے برقی رو کو \عددی{i_{SD}} لکھا جائے گا۔\عددی{p} ماسفیٹ بنانے کی ترکیب شکل \حوالہ{شکل_ماسفیٹ_مثبت_ساخت} میں دکھائی گئی ہے جبکہ اس کی علامتیں شکل \حوالہ{شکل_ماسفیٹ_مثبت_بڑھاتا_علامتیں} میں دکھائی گئی ہیں۔\تحریر{pMOSFET} کے راہ میں برقی رو \اصطلاح {خول} کے حرکت کی بدولت ہے۔\اصطلاح {سورس} سے \اصطلاح {خول} راہ میں خارج ہو کر \اصطلاح {ڈرین} تک سفر کرتے ہیں جہاں انہیں راہ سے حاصل کیا جاتا ہے۔ماسفیٹ میں برقی رو \اصطلاح {خولوں} کے اسی حرکت کی بدولت ہے۔ 
+\عددی{p} ماسفیٹ، جسے ہم اس کتاب میں مثبت ماسفیٹ بھی کہیں گے، کو \عددی{n} قسم کی سلیکان پتری پر بنایا جاتا ہے جس میں دو عدد \عددی{p+} قسم کے خطے بنائے جاتے ہیں۔\عددی{\textup{pMOSFET}} کی کارکردگی بالکل \عددی{\textup{nMOSFET}} کی طرح ہے البتہ اس میں \عددیء{v_{DS}}، \عددی{v_{GS}} اور \عددی{V_t} تینوں کی قیمتیں منفی ہوتی ہیں۔اسی طرح برقی رو \عددی{i_{DS}} کی سمت بھی الٹی ہوتی ہے یعنی برقی رو ٹرانزسٹر کے ڈرین سرے سے باہر کی جانب ہوتا ہے۔اسی لئے \تحریر{pMOSFET} کے برقی رو کو \عددی{i_{SD}} لکھا جائے گا۔\عددی{p} ماسفیٹ بنانے کی ترکیب شکل \حوالہ{شکل_ماسفیٹ_مثبت_ساخت} میں دکھائی گئی ہے جبکہ اس کی علامتیں شکل \حوالہ{شکل_ماسفیٹ_مثبت_بڑھاتا_علامتیں} میں دکھائی گئی ہیں۔\تحریر{pMOSFET} کے راہ میں برقی رو \اصطلاح {خلو} کے حرکت کی بدولت ہے۔\اصطلاح {سورس} سے \اصطلاح {خلو} راہ میں خارج ہو کر \اصطلاح {ڈرین} تک سفر کرتے ہیں جہاں انہیں راہ سے حاصل کیا جاتا ہے۔ماسفیٹ میں برقی رو \اصطلاح {خلووں} کے اسی حرکت کی بدولت ہے۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{pMOSFETstructure}
@@ -1771,7 +1771,7 @@ i_{DS}=I_{DSS} \left(1-\frac{v_{GS}}{V_p} \right)^2 \left(1+\frac{v_{DS}}{V_A} \
 
 %==========
 \جزوحصہ{\تحریر{pJFET}}
-جیسا شکل \حوالہ{شکل_جوڑدار_مثبت_فیٹ_ساخت} الف میں دکھایا گیا ہے، مثبت جوڑدار فیٹ بنانے کی خاطر \عددی{p} قسم سلیکان ٹکڑے کے دونوں اطراف \عددی{n} گیٹ بنائے جاتے ہیں۔ان دو خطوں کو بیرونی دھاتی تار سے جوڑ کر بطور  گیٹ \عددی{(G)} استعمال کیا جاتا ہے۔دو گیٹوں کے درمیان راہ میں آزاد خول پائے جاتے ہیں۔اس راہ پر بیرونی برقی دباو \عددی{v_{SD}} لاگو کرنے سے راہ میں موجود آزاد خول مثبت برقی دباو والے سرے سے منفی برقی دباو والے سرے کی جانب حرکت کریں گے جس سے برقی رو \عددی{i_{SD}} پیدا ہو گی۔یوں مثبت برقی دباو والے سرے سے خارج خول، منفی برقی دباو والے سرے پر حاصل ہوتے ہیں۔اسی سے ان دو سروں کو سورس \عددی{S} اور ڈرین \عددی{D} کے نام دئے گئے ہیں۔یوں \عددی{(pJFET)} میں روایتی برقی رو کی سمت راہ میں سورس سے ڈرین کی جانب ہو گی۔بیرونی برقی دباو کا مثبت سرا \عددی{(pJFET)} کے \عددی{S} کی جانب رکھا جائے گا۔\تحریر{pJFET} میں راہ \عددی{p} قسم کے نیم موصل سے حاصل ہوتا ہے اور اس کے نام میں \عددی{p} اسی  کو ظاہر کرتا ہے۔جیسا شکل \حوالہ{شکل_جوڑدار_مثبت_فیٹ_ساخت} ب میں دکھایا گیا ہے، \تحریر{pJFET} کی علامت میں گیٹ پر تیر کا نشان راہ سے گیٹ کی جانب کو ہوتا ہے۔\تحریر{pJFET} کی صحیح کارکردگی کے لئے ضروری ہے کہ گیٹ اور راہ پر بننے والے \عددی{pn} جوڑ کو غیر چالو رکھا جائے یعنی اس جوڑ پر ڈایوڈ کے سیدھے رخ \عددی{\SI{0.5}{\volt}} سے برقی دباو کو کم رکھا جائے۔
+جیسا شکل \حوالہ{شکل_جوڑدار_مثبت_فیٹ_ساخت} الف میں دکھایا گیا ہے، مثبت جوڑدار فیٹ بنانے کی خاطر \عددی{p} قسم سلیکان ٹکڑے کے دونوں اطراف \عددی{n} گیٹ بنائے جاتے ہیں۔ان دو خطوں کو بیرونی دھاتی تار سے جوڑ کر بطور  گیٹ \عددی{(G)} استعمال کیا جاتا ہے۔دو گیٹوں کے درمیان راہ میں آزاد خلو پائے جاتے ہیں۔اس راہ پر بیرونی برقی دباو \عددی{v_{SD}} لاگو کرنے سے راہ میں موجود آزاد خلو مثبت برقی دباو والے سرے سے منفی برقی دباو والے سرے کی جانب حرکت کریں گے جس سے برقی رو \عددی{i_{SD}} پیدا ہو گی۔یوں مثبت برقی دباو والے سرے سے خارج خلو، منفی برقی دباو والے سرے پر حاصل ہوتے ہیں۔اسی سے ان دو سروں کو سورس \عددی{S} اور ڈرین \عددی{D} کے نام دئے گئے ہیں۔یوں \عددی{(pJFET)} میں روایتی برقی رو کی سمت راہ میں سورس سے ڈرین کی جانب ہو گی۔بیرونی برقی دباو کا مثبت سرا \عددی{(pJFET)} کے \عددی{S} کی جانب رکھا جائے گا۔\تحریر{pJFET} میں راہ \عددی{p} قسم کے نیم موصل سے حاصل ہوتا ہے اور اس کے نام میں \عددی{p} اسی  کو ظاہر کرتا ہے۔جیسا شکل \حوالہ{شکل_جوڑدار_مثبت_فیٹ_ساخت} ب میں دکھایا گیا ہے، \تحریر{pJFET} کی علامت میں گیٹ پر تیر کا نشان راہ سے گیٹ کی جانب کو ہوتا ہے۔\تحریر{pJFET} کی صحیح کارکردگی کے لئے ضروری ہے کہ گیٹ اور راہ پر بننے والے \عددی{pn} جوڑ کو غیر چالو رکھا جائے یعنی اس جوڑ پر ڈایوڈ کے سیدھے رخ \عددی{\SI{0.5}{\volt}} سے برقی دباو کو کم رکھا جائے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{pJFETstructure}
