--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -1364,7 +1364,7 @@ I_{Cc}=\frac{V_{BB}-V_{BE}}{\left (\frac{R_B''}{\beta+1} \right )}=\frac{V_{BB}-
 \begin{align}
 I_{Cc}=I_{Ca}
 \end{align}
-ہوں گے، اگرچہ  \عددی{V_{CEb} \neq V_{CEc}} ہوں گے ۔مساوات \حوالہ{مساوات_ٹرانزسٹر_مخارج_کا_عکس_الف}  کو یوں بھی لکھا جا سکتا ہے۔
+ہوں گے، اگرچہ  \عددی{V_{CEb} \neq V_{CEc}} ہوں گے۔مساوات \حوالہ{مساوات_ٹرانزسٹر_مخارج_کا_عکس_الف}  کو یوں بھی لکھا جا سکتا ہے۔
 \begin{align} \label{مساوات_ٹرانزسٹر_مخارج_کا_عکس}
 R_E'=\left (\beta+1 \right )R_E
 \end{align}
@@ -1821,7 +1821,7 @@ V_{BB}&=V_{BE}+I_E \left(\frac{R_B}{\beta+1}+R_E \right)\\
 I_{CQ1}=\SI{4}{\milli \ampere}
 \end{align}
 
-\عددی{Q_2} پر پائے جانے والا بدلتا رو خطِ بوجھ، \زیرنوشت{V}{CE}{غیرافزائندہ} پر عمودی کھینچے خط کو نقطے\عددی{P} پر ٹکراتا ہے ۔چونکہ \زیرنوشت{V}{CE}{غیرافزائندہ} سے کم برقی دباو پر ٹرانزسٹر قوت افزائش کھو دیتا ہے لہٰذا \عددی{i_C} کا حیطہ \عددی{I_P-I_{CQ2}} کے برابر ہو گا۔اس طرح اگر \عددی{Q_2} پر برقی رو \عددی{I_{CQ2}} اور  نقطے\عددی{P} پر \عددی{I_{CQ2}+\SI{4}{\milli \ampere}} ہو تب \عددی{i_C} کا حیطہ \عددی{\SI{\mp 4}{\milli \ampere}} ممکن ہو گا۔
+\عددی{Q_2} پر پائے جانے والا بدلتا رو خطِ بوجھ، \زیرنوشت{V}{CE}{غیرافزائندہ} پر عمودی کھینچے خط کو نقطے\عددی{P} پر ٹکراتا ہے۔چونکہ \زیرنوشت{V}{CE}{غیرافزائندہ} سے کم برقی دباو پر ٹرانزسٹر قوت افزائش کھو دیتا ہے لہٰذا \عددی{i_C} کا حیطہ \عددی{I_P-I_{CQ2}} کے برابر ہو گا۔اس طرح اگر \عددی{Q_2} پر برقی رو \عددی{I_{CQ2}} اور  نقطے\عددی{P} پر \عددی{I_{CQ2}+\SI{4}{\milli \ampere}} ہو تب \عددی{i_C} کا حیطہ \عددی{\SI{\mp 4}{\milli \ampere}} ممکن ہو گا۔
 
 کسی بھی سیدھے خط کی مساوات \عددی{y-y'=m(x-x')} سے \عددی{m=\tfrac{\Delta y}{\Delta x}} حاصل ہوتا ہے جہاں \عددی{\Delta y} اور \عددی{\Delta x} اس خط پر کسی دو نقطوں سے حاصل کئے جا سکتے ہیں۔بدلتا رو، خطِ بوجھ پر \عددی{Q_2} اور \عددی{P} دو نقطیں ہیں جن سے 
 \begin{align*}
@@ -2061,7 +2061,7 @@ i_{BR}=I_S \left (\frac{1}{\alpha_R}-1 \right ) \left (e^{\frac{v_{BC}}{V_T}}-1 
 \caption{\عددی{npn} کا ٹرانزسٹر کا ایبر-مال ماڈل}
 \label{شکل_مکمل_ایبر_مال_ماڈل}
 \end{figure}
-عمومی طرز پر مائل ٹرانزسٹر کا بیس-ایمٹر  جوڑ سیدھا مائل ( یعنی\عددی{v_{BE} \geq \SI{0}{\volt}} ) ہوتا ہے جبکہ بیس-کلکٹر جوڑ غیر چالو ( یعنی \عددی{v_{BC} \leq \SI{0.5}{\volt} }) ہوتا ہے ۔یوں مثلاً اگر \عددی{v_{BE}=\SI{0.65}{\volt}} اور \عددی{v_{BC}=\SI{-0.5}{\volt}} ہوں تو \عددی{I_S =\SI{e-14}{\ampere}}  لیتے ہوئے \عددی{i_F=\SI{1.957}{\milli \ampere}} اور \عددی{i_R \approx I_S} حاصل ہوتے ہیں۔اس طرح \عددی{i_R} اور اس پر منحصر جزو نظر انداز کئے جا سکتے ہیں۔شکل \حوالہ{شکل_ایبر_مال_کی_کارکردگی} الف میں ایسا ہی کرتے ہوئے ریاضی نمونہ  کے وہ حصے دکھائے گئے ہیں جو عومی طرز پر مائل \عددی{npn} ٹرانزسٹر کی کارکردگی دیتے ہیں۔ریاضی نمونہ  کے بقایا حصوں پر کاٹا لگایا گیا ہے نظر انداز کیا گیا ہے۔اسی طرح شکل  ب میں غیر عمومی طرز پر مائل ٹرانزسٹر کی کارکردگی دینے والے حصے دکھائے گئے ہیں جبکہ بقایا حصوں پر کاٹا لگایا گیا ہے۔
+عمومی طرز پر مائل ٹرانزسٹر کا بیس-ایمٹر  جوڑ سیدھا مائل ( یعنی\عددی{v_{BE} \geq \SI{0}{\volt}} ) ہوتا ہے جبکہ بیس-کلکٹر جوڑ غیر چالو ( یعنی \عددی{v_{BC} \leq \SI{0.5}{\volt} }) ہوتا ہے۔یوں مثلاً اگر \عددی{v_{BE}=\SI{0.65}{\volt}} اور \عددی{v_{BC}=\SI{-0.5}{\volt}} ہوں تو \عددی{I_S =\SI{e-14}{\ampere}}  لیتے ہوئے \عددی{i_F=\SI{1.957}{\milli \ampere}} اور \عددی{i_R \approx I_S} حاصل ہوتے ہیں۔اس طرح \عددی{i_R} اور اس پر منحصر جزو نظر انداز کئے جا سکتے ہیں۔شکل \حوالہ{شکل_ایبر_مال_کی_کارکردگی} الف میں ایسا ہی کرتے ہوئے ریاضی نمونہ  کے وہ حصے دکھائے گئے ہیں جو عومی طرز پر مائل \عددی{npn} ٹرانزسٹر کی کارکردگی دیتے ہیں۔ریاضی نمونہ  کے بقایا حصوں پر کاٹا لگایا گیا ہے نظر انداز کیا گیا ہے۔اسی طرح شکل  ب میں غیر عمومی طرز پر مائل ٹرانزسٹر کی کارکردگی دینے والے حصے دکھائے گئے ہیں جبکہ بقایا حصوں پر کاٹا لگایا گیا ہے۔
 
 \عددی{i_F}اور \عددی{i_R} کے مساوات ایک جیسے  اشکال رکھتے ہیں اور یوں معلوم ہوتا ہے جیسے ٹرانزسٹر کے دونوں جانب کی کارکردگی یکساں ہو گی۔حقیقت میں ایسا نہیں۔فرض کریں کہ \عددیء{\alpha_F=\num{0.99}}، \عددی{\alpha_R=\num{0.01}} اور \عددی{I_S=\SI{e-14}{\ampere}} ہیں۔ اس ٹرانزسٹر کو عمومی طرز پر
 \begin{align*}
@@ -2513,7 +2513,7 @@ i_C&=I_S e^{\frac{v_{BE}}{V_T}}\\
 \begin{align}
 i_C = I_C e^{\frac{v_{be}}{V_T}}
 \end{align}
-اگر  \عددی{v_{be} << V_T} ہو تب سلسلہ مکلارن  کی مدد سے اس مساوات کو یوں لکھ سکتے ہیں۔
+اگر  \عددی{v_{be} \ll V_T} ہو تب سلسلہ مکلارن  کی مدد سے اس مساوات کو یوں لکھ سکتے ہیں۔
 \begin{align} \label{مساوات_ٹرانزسٹر_سلسلہ+مکلارن}
 i_C=I_C \left [1+\frac{1}{1!} \left(\frac{v_{be}}{V_T} \right )+\frac{1}{2!} \left(\frac{v_{be}}{V_T} \right)^2+ \cdots \right ]
 \end{align}
@@ -3131,7 +3131,7 @@ A_v =\frac{v_o}{v_s}=-\frac{g_m r_{be} R_C}{ R_B+r_{be}}=-\frac{0.04 \times 2500
 \caption{سائن-نما اشارات}
 \label{شکل_سائن_نما_اشارات}
 \end{figure}
-داخلی اشارہ کی شکل کچھ بھی ہو سکتی ہے۔شکل  \حوالہ{شکل_غیر_سائن_نما_اشارہ} میں غیر سائن-نما اشارہ دکھایا گیا ہے جہاں دونوں گرافوں میں برقی دباو کے محدد کی پیمائش مختلف ہے ۔آپ دیکھ سکتے ہیں کہ جب داخلی اشارہ مثبت ہوتا ہے اس وقت خارجی اشارہ منفی ہوتا ہے اور جب داخلی اشارہ منفی ہوتا ہے اس دوران خارجی اشارہ مثبت ہوتا ہے۔ 
+داخلی اشارہ کی شکل کچھ بھی ہو سکتی ہے۔شکل  \حوالہ{شکل_غیر_سائن_نما_اشارہ} میں غیر سائن-نما اشارہ دکھایا گیا ہے جہاں دونوں گرافوں میں برقی دباو کے محدد کی پیمائش مختلف ہے۔آپ دیکھ سکتے ہیں کہ جب داخلی اشارہ مثبت ہوتا ہے اس وقت خارجی اشارہ منفی ہوتا ہے اور جب داخلی اشارہ منفی ہوتا ہے اس دوران خارجی اشارہ مثبت ہوتا ہے۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{nonSinusoidalWave}
@@ -3949,7 +3949,7 @@ r_i=R_{m1}=\SI{37.854}{\kilo \ohm}
 %=========
 
 \ابتدا{مثال}
-کپیسٹر \عددی{C_E}  اور مزاحمت \عددی{R_{CE}}  سلسلہ وار جوڑتے ہوئے انہیں شکل \حوالہ{شکل_مثال_کا_دور_الف} الف میں \عددی{R_E}  کے متوازی نسب کریں ۔حاصل ایمپلیفائر کی داخلی مزاحمت \عددی{r_i} اور افزائش \عددی{A_v}  حاصل کریں۔\عددی{R_{CE}}  کی قیمت \عددی{\SI{100}{\ohm}}  رکھیں۔
+کپیسٹر \عددی{C_E}  اور مزاحمت \عددی{R_{CE}}  سلسلہ وار جوڑتے ہوئے انہیں شکل \حوالہ{شکل_مثال_کا_دور_الف} الف میں \عددی{R_E}  کے متوازی نسب کریں۔حاصل ایمپلیفائر کی داخلی مزاحمت \عددی{r_i} اور افزائش \عددی{A_v}  حاصل کریں۔\عددی{R_{CE}}  کی قیمت \عددی{\SI{100}{\ohm}}  رکھیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{transistorExampleB}
