--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -118,7 +118,7 @@ v_D=\SI{0.7}{\volt}
 
 مساوات \حوالہ{مساوات_ڈایوڈ_کی_مکمل_مساوات}  میں \عددی{I_S=\SI{5.1e-15}{\ampere}} لیتے ہوئے اسے مثبت برقی دباو کے لئے  شکل \حوالہ{شکل_ڈایوڈ_کا_خط} میں گراف کیا گیا ہے جہاں افقی محور پر \عددی{v_D} کو وولٹ میں اور عمودی محور پر \عددی{i_D} کو ایمپیئر میں دکھایا گیا ہے۔اس گراف سے واضح ہے کہ \عددی{0.5 V > v_D > 0 V}  کے احاطے میں ڈایوڈ سے گزرتی برقی رو قابلِ نظر انداز ہے۔اگرچہ جب بھی  \عددی{v_D> 0V} ہو ڈایوڈ کو \اصطلاح {سیدھا مائل}\فرہنگ{سیدھا مائل}\فرہنگ{مائل!سیدھا}\فرہنگ{forward biased}\حاشیہب{forward biased} تصور کیا جاتا ہے، حقیقت میں ڈایوڈ کو\عددی{v_D>0.5 V} کی صورت میں ہی \اصطلاح {چالو}\فرہنگ{چالو} تصور کیا جاتا ہے۔یوں \عددی{v_D=0.5 V} کو ڈایوڈ  کی \اصطلاح {چالو برقی دباو}\فرہنگ{چالو برقی دباو}\فرہنگ{برقی دباو!چالو}\فرہنگ{cut-in voltage}\حاشیہب{cut-in voltage}  کہتے ہیں۔چالو ڈایوڈ کی مساوات میں چونکہ 
 \begin{align*}
-e^{\frac{v_D}{V_T}}>>1
+e^{\frac{v_D}{V_T}} \gg 1
 \end{align*}
 ہوتا ہے لہٰذا چالو ڈایوڈ کی مساوات یوں لکھی جا سکتی ہے۔
 \begin{align} \label{مساوات_چالو_ڈایوڈ}
@@ -966,7 +966,7 @@ m=\left . \frac{\partial y}{\partial x} \right|_Q
 \end{figure}
 شکل \حوالہ{شکل_سیدھا_تفاعل_شکل_برقرار} الف میں دو نقطے \عددی{t_m} اور \عددی{t_n}  کو مثال بناتے ہوئے پورے عمل کو سمجھایا گیا ہے۔ان دو نقطوں پر \عددی{x(t_m)} اور \عددی{x(t_n)} حاصل کئے جاتے ہیں۔ان کی قیمت جاننا ضروری نہیں، بس اتنا درکار ہے کہ ان کی نشاندہی گراف پر کر دی جائے۔
 
-شکل  الف اور شکل  ب یوں بنائے جاتے ہیں کہ شکل  ب کا \عددی{x} محدد شکل  الف کے \عددی{x} محدد کے متوازی ہو اور ان کی جسامت بھی برابر ہو۔یوں شکل  الف میں \عددی{x(t_m)} اور \عددی{x(t_n)} سے سیدھی لکیریں شکل  ب تک لے جائیں ۔اس طرح شکل  ب سے \عددی{y(t_m)} اور \عددی{y(t_n)}حاصل ہوں گے۔
+شکل  الف اور شکل  ب یوں بنائے جاتے ہیں کہ شکل  ب کا \عددی{x} محدد شکل  الف کے \عددی{x} محدد کے متوازی ہو اور ان کی جسامت بھی برابر ہو۔یوں شکل  الف میں \عددی{x(t_m)} اور \عددی{x(t_n)} سے سیدھی لکیریں شکل  ب تک لے جائیں۔اس طرح شکل  ب سے \عددی{y(t_m)} اور \عددی{y(t_n)}حاصل ہوں گے۔
 
 شکل  ب اور شکل  پ یوں بنائے جاتے ہیں کہ شکل  پ کا \عددی{y} محدد شکل  ب کے \عددی{y} محدد کے بالکل دائیں جانب برابر رکھا جائے اور ان کی جسامت بھی برابر ہو۔یوں شکل  ب کے \عددی{y(t_m)} اور \عددی{y(t_n)} نقطوں سے شکل  پ تک افقی لکیریں بنائیں۔شکل  پ پر ان نقطوں کو وقت \عددی{t_m} اور \عددی{t_n} کے ساتھ گراف کریں۔مندرجہ بالا پورا عمل شکل  \حوالہ{شکل_سیدھا_تفاعل_شکل_برقرار}  کو دیکھتے ہی ایک دم سمجھ آ جانا چاہئے۔
 
@@ -1023,7 +1023,7 @@ v_I = V_I+v_i
 \label{شکل_باریک_اشارہ}
 \end{figure}
 
-\اصطلاح {باریک اشارہ}\فرہنگ{باریک اشارہ}\فرہنگ{small signal}\حاشیہب{small signal}  سے مراد وہ بدلتا اشارہ ہے جس کا حیطہ دور میں پائے جانے والے یک سمت برقی دباو یا  یک سمت برقی رو کی قیمتوں سے نہایت کم ہو ( یعنی \عددی{v_i << V_I} )۔
+\اصطلاح {باریک اشارہ}\فرہنگ{باریک اشارہ}\فرہنگ{small signal}\حاشیہب{small signal}  سے مراد وہ بدلتا اشارہ ہے جس کا حیطہ دور میں پائے جانے والے یک سمت برقی دباو یا  یک سمت برقی رو کی قیمتوں سے نہایت کم ہو ( یعنی \عددی{v_i \ll V_I} )۔
 
 شکل \حوالہ{شکل_داخلی_برقی_دباو_کا_بار_کے_خط_پر_اثر}  میں تغیر پذیر داخلی برقی دباو کا خطِ بوجھ پر اثر دکھایا گیا۔اسی ترکیب کو یہاں استعمال کرتے ہوئے باریک داخلی اشارہ \عددی{v_i}  کی موجودگی میں ڈایوڈ کی کارکردگی پر غور کیا جائے گا۔تغیر پذیر داخلی برقی دباو \عددی{v_I}  سے نپٹنے کی خاطر مختلف لمحات پر وقت کو ساکن تصور کرتے ہوئے ان لمحات پر داخلی برقی دباو کی کل قیمت لی جاتی ہے۔ان قیمتوں پر خطِ بوجھ اور ڈایوڈ کی مساوات کا خط گراف کیا جاتا ہے۔یوں مختلف اوقات پر ڈایوڈ کے مختلف نقطہ مائل \عددی{(V_{DQ},I_{DQ})}  حاصل کئے جاتے ہیں۔
 
@@ -1249,7 +1249,7 @@ p_{n0} = \frac{n_i^2}{n_{n0}} \approx \frac{n_i^2}{N_D}
 
 قلم میں تمام ایٹم اپنی اپنی جگہ جکڑے رہتے ہیں۔یہ اپنی اپنی جگہ جھول سکتے ہیں لیکن جگہ تبدیل نہیں کر سکتے۔ایسے ایٹموں کو ساکن تصور کرتے ہوئے ہم دیکھتے ہیں کہ قلم میں جگہ جگہ ساکن مثبت بار والے نائٹروجن ایٹم پائے جاتے ہیں۔یوں منفی قسم کے نیم موصل قلم میں مثبت بار ساکن رہتے ہیں جبکہ اس میں منفی بار (آزاد الیکٹران) حرکت پذیر ہوتے ہیں۔یوں منفی نیم موصل مواد میں برقی رو کا بہاو آزاد الیکٹران کے حرکت سے ہوتا ہے۔آزاد الیکٹران نیم موصل مواد کے وجود میں بالکل اسی طرح حرکت کرتے ہیں جیسے بند ڈبہ میں گیس کے ایٹم یا مالیکیول حرکت کرتے ہیں۔ اسی وجہ سے آزاد الیکٹران کو کبھی کبھار \اصطلاح {الیکٹران گیس}\فرہنگ{الیکٹران گیس}\فرہنگ{electron gas}\حاشیہب{electron gas}   بھی کہا جاتا ہے۔
 
-ان دو اقسام کے باروں کا تذکرہ کرتے عموماً \اصطلاح {ساکن بار}\فرہنگ{ساکن بار}\فرہنگ{immobile!charges}\حاشیہب{immobile charges}  اور \اصطلاح {متحرک بار}\فرہنگ{متحرک بار}\فرہنگ{mobile!charges}\حاشیہب{mobile charges}  کی بات کی جاتی ہے۔یوں منفی قسم کے نیم موصل مادے میں موصلیت صرف \اصطلاح {متحرک باروں} کی وجہ سے پیدا ہوتی ہے ۔ساکن بار کا قلم کے موصلیت پیدا کرنے  میں کوئی کردار نہیں۔منفی نیم موصل مواد کو ظاہر کرنا بھی شکل  میں دکھایا گیا ہے جہاں \عددی{(-)} آزاد الیکٹران کے وجود کو اجاگر کرتا ہے نا کہ کُل برقی بار کو۔سلیکان میں بیرونی مادہ مثلاً نائٹروجن  کے شمولیت سے پیدا آزاد الیکٹران کو \اصطلاح {اکثریتی الیکٹران}\فرہنگ{اکثریتی!الیکٹران}\فرہنگ{majority!electrons}\حاشیہب{majority electrons}  بھی کہتے ہیں۔
+ان دو اقسام کے باروں کا تذکرہ کرتے عموماً \اصطلاح {ساکن بار}\فرہنگ{ساکن بار}\فرہنگ{immobile!charges}\حاشیہب{immobile charges}  اور \اصطلاح {متحرک بار}\فرہنگ{متحرک بار}\فرہنگ{mobile!charges}\حاشیہب{mobile charges}  کی بات کی جاتی ہے۔یوں منفی قسم کے نیم موصل مادے میں موصلیت صرف \اصطلاح {متحرک باروں} کی وجہ سے پیدا ہوتی ہے۔ساکن بار کا قلم کے موصلیت پیدا کرنے  میں کوئی کردار نہیں۔منفی نیم موصل مواد کو ظاہر کرنا بھی شکل  میں دکھایا گیا ہے جہاں \عددی{(-)} آزاد الیکٹران کے وجود کو اجاگر کرتا ہے نا کہ کُل برقی بار کو۔سلیکان میں بیرونی مادہ مثلاً نائٹروجن  کے شمولیت سے پیدا آزاد الیکٹران کو \اصطلاح {اکثریتی الیکٹران}\فرہنگ{اکثریتی!الیکٹران}\فرہنگ{majority!electrons}\حاشیہب{majority electrons}  بھی کہتے ہیں۔
 
 \حصہ{مثبت قسم کا نیم موصل}
 کیمیائی دوری جدول کے تیسرے جماعت میں بوران \عددیء{\ce{B}}، المونیم \عددی{\ce{Al}}  وغیرہ پائے جاتے ہیں جن کے بیرونی مدار میں صرف تین الیکٹران ہوتے ہیں۔سلیکان کے قلم میں اس جماعت کے عناصر کی شمولیت کے اثرات دیکھنے کی خاطر المونیم کی شمولیت کو مثال بناتے ہیں۔
@@ -1357,7 +1357,7 @@ J_n = q D_n \od{n}{x}
 اس مساوات میں منفی کی علامت استعمال نہ کرنے سے ہی برقی رو کی صحیح سمت حاصل ہوتی ہے۔ \عددی{D_n} آزاد الیکٹران کے \اصطلاح {نفوذ کا مستقل}\فرہنگ{نفوذ کا مستقل!الیکٹران}\فرہنگ{مستقل!نفوذِ الیکٹران}\فرہنگ{diffusion constant! electrons}\حاشیہب{electron's diffusion constant} ہے جس کی قیمت سلیکان کے لئے \عددی{\SI{34}{cm^2/s}} ہے۔
 
 \جزوحصہ{بہاو}
-	آزاد الیکٹران اور آزاد خلو کے حرکت کرنے کا دوسرا ذریعہ \اصطلاح {بہاو}\فرہنگ{بہاو}\فرہنگ{drift}\حاشیہب{drift} ہے ۔بہاو سے پیدا برقی رو کو \اصطلاح {بہاو برقی رو}\فرہنگ{بہاو برقی رو}\فرہنگ{drift current}\حاشیہب{drift current}  کہتے ہیں۔
+	آزاد الیکٹران اور آزاد خلو کے حرکت کرنے کا دوسرا ذریعہ \اصطلاح {بہاو}\فرہنگ{بہاو}\فرہنگ{drift}\حاشیہب{drift} ہے۔بہاو سے پیدا برقی رو کو \اصطلاح {بہاو برقی رو}\فرہنگ{بہاو برقی رو}\فرہنگ{drift current}\حاشیہب{drift current}  کہتے ہیں۔
 
 اگر سلیکان کے ایک سلاخ، جس کی لمبائی \عددی{L} ہو، کے دو سروں کے مابین برقی دباو \عددی{V} مہیا کی جائے تو اس سلاخ میں \اصطلاح {برقی!شدت}\فرہنگ{برقی شدت}\فرہنگ{electric field intensity}\حاشیہب{electric field intensity}  \عددی{E} پیدا ہو گی جہاں
 \begin{align*}
@@ -1767,7 +1767,7 @@ i_D \approx I_S e^{\frac{v_D}{V_T}} = I_S e^{\frac{V_D+v_d}{V_T}}=I_{DQ} e^{\fra
 i_D=I_{DQ} \left[1+ \frac{1}{1!} \frac{v_d}{V_T}+ \frac{1}{2!} \left (\frac{v_d}{V_T} \right )^{2} +\cdots \right ]
 \end{align}
 
-اس مساوات میں اگر \عددی{v_d}  کی قیمت \عددی{V_T} کے قیمت سے بہت کم ہو (یعنی \عددی{v_d << V_T}) تو پہلے دو جزو کے علاوہ بقایا کو نظر انداز کرنا ممکن ہو گا اور اسے یوں لکھا جا سکتا ہے۔
+اس مساوات میں اگر \عددی{v_d}  کی قیمت \عددی{V_T} کے قیمت سے بہت کم ہو (یعنی \عددی{v_d \ll V_T}) تو پہلے دو جزو کے علاوہ بقایا کو نظر انداز کرنا ممکن ہو گا اور اسے یوں لکھا جا سکتا ہے۔
 \begin{align}
 i_D \approx I_{DQ} \left (1+\frac{v_d}{V_T} \right )
 \end{align}
@@ -1834,7 +1834,7 @@ v_Z=V_{Z0}+i_Z r_z
 \caption{زینر ڈایوڈ کا ریاضی نمونہ}
 \label{شکل_زینر_ڈایوڈ_کا_ماڈل}
 \end{figure}
-زینر گھٹنے کے قریب خط کافی زیادہ مڑتا ہے جبکہ زیادہ برقی رو (یعنی \عددی{I_Z>> I_{ZK}}  ) پر یہ خط تقریباً سیدھا رہتا ہے۔زینر ڈایوڈ کا عمومی استعمال اس سیدھے خطے میں ہی کیا جاتا ہے۔
+زینر گھٹنے کے قریب خط کافی زیادہ مڑتا ہے جبکہ زیادہ برقی رو (یعنی \عددی{I_Z\gg I_{ZK}}  ) پر یہ خط تقریباً سیدھا رہتا ہے۔زینر ڈایوڈ کا عمومی استعمال اس سیدھے خطے میں ہی کیا جاتا ہے۔
 
 
 زینر ڈایوڈ کو عموماً \اصطلاح {زینر گُھٹنے} کے قریب استعمال نہیں کیا جاتا۔زینر گُھٹنے کے قریب خطے کو نظر انداز کرتے ہوئے اور \عددی{r_z = 0}  لیتے ہوئے زینر ڈایوڈ کے خط کو سادہ شکل دی جا سکتی ہے جسے شکل میں دکھایا گیا ہے۔
@@ -2463,7 +2463,7 @@ r_d=\SI{2.2}{\ohm}\\
 \انتہا{سوال}
 %=================
 \ابتدا{سوال}\شناخت{سوال_زینر_ڈایوڈ_بدلتا_بار_بدلتا_دباو}
-شکل \حوالہ{شکل_زینر_ڈایوڈ_سوال_الف}  میں بدلتے مزاحمت \عددی{R_L} اور بدلتے داخلی برقی دباو کی صورت میں \عددی{v_L} کو زینر ڈایوڈ کے مدد سے برقرار رکھا گیا ہے۔اس سوال میں \عددی{R_L} کی قیمت \عددی{\SI{150}{\ohm}} تا \عددی{\SI{1200}{\ohm}} جبکہ داخلی برقی دباو \عددی{\SI{20.2}{\volt}} تا \عددی{\SI{20.2}{\volt}} تبدیل ہو سکتے ہیں  ۔گزشتہ سوال میں اس زینر ڈایوڈ کے خصوصیات بیان کئے گئے ہیں۔
+شکل \حوالہ{شکل_زینر_ڈایوڈ_سوال_الف}  میں بدلتے مزاحمت \عددی{R_L} اور بدلتے داخلی برقی دباو کی صورت میں \عددی{v_L} کو زینر ڈایوڈ کے مدد سے برقرار رکھا گیا ہے۔اس سوال میں \عددی{R_L} کی قیمت \عددی{\SI{150}{\ohm}} تا \عددی{\SI{1200}{\ohm}} جبکہ داخلی برقی دباو \عددی{\SI{20.2}{\volt}} تا \عددی{\SI{20.2}{\volt}} تبدیل ہو سکتے ہیں۔گزشتہ سوال میں اس زینر ڈایوڈ کے خصوصیات بیان کئے گئے ہیں۔
 \begin{enumerate}
 \item
 درکار \عددی{r_i} کی قیمت حاصل کریں۔
