--- a/tex/electronicsFeedback.tex
+++ b/tex/electronicsFeedback.tex
@@ -442,7 +442,8 @@ A_f  = \frac{A}{1+W A} \approx \frac{A}{W A} =\frac{1}{W}
 مستحکم ایمپلیفائر تخلیق دینے کا طریقہ ایک مثال کی مدد سے سیکھتے ہیں۔
 
 \ابتدا{مثال} 
-موصل نما ایمپلیفائر تخلیق دیتے وقت درجہ حرارت کے تبدیلی سے توقع کی جاتی ہے کہ بغیر واپسی اشارے کے ایمپلیفائر کی افزائش میں \عددیء{5 \%} تبدیلی رونما ہو گی جو کہ قابل قبول نہیں۔زیادہ سے زیادہ \عددیء{0.4 \%} تبدیلی قابل برداشت ہے۔ایک عدد موصل نما واپسی ایمپلیفائر تخلیق دیں جس کی افزائش \عددیء{45 ^A/_V} ہو اور اس میں تبدیلی \عددیء{0.4 \%} سے تجاوز نہ کرے۔
+موصل نما ایمپلیفائر تخلیق دیتے وقت درجہ حرارت کے تبدیلی سے توقع کی جاتی ہے کہ بغیر واپسی اشارے کے ایمپلیفائر کی افزائش میں \عددیء{5 \%} تبدیلی رونما ہو گی جو کہ قابل قبول نہیں۔زیادہ سے
+ زیادہ \عددیء{0.5 \%} تبدیلی قابل برداشت ہے۔ایک عدد موصل نما واپسی ایمپلیفائر تخلیق دیں جس کی افزائش \عددیء{45 ^A/_V} ہو اور اس میں تبدیلی \عددیء{0.5 \%} سے تجاوز نہ کرے۔
 
 حل: 
 
@@ -456,12 +457,12 @@ M &=10
 \end{align*}
 حاصل ہوتا ہے۔یوں اس ایمپلیفائر کو دس گنا مستحکم کرنے کی ضرورت ہے۔
 
-لہٰذا ہم ایسا یمپلیفائر تخلیق دیں گے جس کی واپسی اشارہ شامل کرنے سے پہلے افزائش درکار قیمت سے  \عددیء{M} گنا زیادہ ہو  یعنی \عددیء{A} کی قیمت \عددیء{10 \times 45=450} ہو گی۔اس میں واپسی اشارے کی شمولیت سے افزائش کو دس گنا مستحکم کیا جائے گا اور ساتھ ہی ساتھ \عددیء{A_f=45} حاصل کی جائے گی جو کہ درکار موصل نما افزائش ہے۔مساوات \حوالہ{مساوات_واپسی_کل_افزائش} کے تحت
+لہٰذا ہم ایسا  ایمپلیفائر تخلیق دیں گے جس کی واپسی اشارہ شامل کرنے سے پہلے افزائش درکار قیمت سے  \عددیء{M} گنا زیادہ ہو  یعنی \عددیء{A} کی قیمت \عددیء{10 \times 45=450} ہو گی۔اس میں واپسی اشارے کی شمولیت سے افزائش کو دس گنا مستحکم کیا جائے گا اور ساتھ ہی ساتھ \عددیء{A_f=45} حاصل کی جائے گی جو کہ درکار موصل نما افزائش ہے۔مساوات \حوالہ{مساوات_واپسی_کل_افزائش} کے تحت
 \begin{align*}
-45 =\frac{450}{1+W \times 450} \approx \frac{1}{W} \\
-W =\frac{1}{45}=\num{0.02222}
+45 =\frac{450}{1+W \times 450} \\
+W =\num{0.02}
 \end{align*}
-حاصل ہوتا ہے جو کہ واپس کار  کے مستقل کی درکار قیمت ہے۔
+حاصل ہوتا ہے جو  واپس کار   مستقل کی درکار قیمت ہے۔
 
 \انتہا{مثال}
 %====================
